# cinema4d-mcp

./: README.md  pyproject.toml
c4d_plugin/: mcp_server_plugin.pyp
docs/: USAGE_GUIDE.md
src/cinema4d_mcp/: server.py
tests/: test_server.py
